2008-07-21 10:24 -0400  Aron Griffis  <agriffis@n01se.net>  (96b0dd25a550)

	* copy.h, mutt.h: noop cleanup: move mutt_copy_header flags to copy.h

	Noticed while reading that these flags are better defined in copy.h
	than mutt.h. Builds without warnings.

	Signed-off-by: Aron Griffis <agriffis@n01se.net>

2008-07-24 16:19 -0400  Brendan Cully  <brendan@kublai.com>  (0e2f9189a1dd)

	* ChangeLog, m4/codeset.m4, m4/iconv.m4: Fix m4 serial numbers to
	avoid aclocal 1.10 warnings

2008-07-21 11:42 +0200  Rocco Rutte  <pdmef@gmx.net>  (7e6d98886cce)

	* doc/makedoc.c: makedoc: Add ".ie" and ".il" to support itemized
	lists.

	Some settings docs use verbatim screen environments to print lists
	while support for real lists will make it look nicer: for docbook
	use <itemizedlist/>, \(hy for roff and '-' for text.

2008-07-21 11:41 +0200  Rocco Rutte  <pdmef@gmx.net>  (e09af06a5312)

	* doc/manual.xml.head: Document that account-hook is intended for
	connection-related settings only

2008-07-21 11:40 +0200  Rocco Rutte  <pdmef@gmx.net>  (089c83504474)

	* doc/manual.xml.head: Manual: Use tables for message flags as it's
	more compact

2008-07-21 11:40 +0200  Rocco Rutte  <pdmef@gmx.net>  (7bdd9439304e)

	* doc/manual.xml.head: Manual: minor formatting tweaks

2008-07-21 09:11 +0200  Rocco Rutte  <pdmef@gmx.net>  (f93dcd689032)

	* ChangeLog, alias.c, init.h: Encode lines written to $alias_file in
	$config_charset if set. Closes #3095

2008-07-10 09:38 -0400  Aron Griffis  <agriffis@n01se.net>  (7729b1ad530c)

	* copy.c, protos.h, sendlib.c: Unify mutt_write_references

	copy.c and sendlib.c have independent and different implementations
	of writing references to a file. Choose the one in sendlib since
	it's conservative with mallocs and supports trimming the list.

	Signed-off-by: Aron Griffis <agriffis@n01se.net>

2008-07-10 09:38 -0400  Aron Griffis  <agriffis@n01se.net>  (651ffe277dfd)

	* copy.c: Clean up error handling in mutt_copy_header
